--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+# Web App
 streamlit>=1.32.0
+
+# Data processing
 pandas>=2.0.0
 numpy>=1.24.0
+
+# Visualization
 plotly>=5.18.0
 matplotlib>=3.8.0
 seaborn>=0.13.0
+
+# Machine Learning
+scikit-learn>=1.4.0
+
+# Time utilities
+python-dateutil>=2.8.2
+pytz>=2023.3
